--- a/css/intro/intro_large_desktop.scss
+++ b/css/intro/intro_large_desktop.scss
@@ -1,6 +1,6 @@
 @media (min-width: $large-desktop-breakpoint) {
   .intro {
-    min-height: 670px;
+    min-height: 620px;
     max-height: 950px;
 
     .brand {
@@ -61,9 +61,9 @@
     }
 
     .marker {
-      top: 317px;
-      right: -67px;
-      width: 158px;
+      top: calc(50% - 40px);
+      right: 5px;
+      width: 148px;
     }
 
     .pantones {
@@ -73,8 +73,8 @@
     }
 
     .earphones {
-      top: 5px;
-      right: -40px;
+      top: 45px;
+      right: 110px;
       width: 243px;
     }
 
@@ -87,7 +87,7 @@
     .pencil {
       top: calc(50% + 70px);
       right: 44px;
-      width: 70px;
+      width: 65px;
     }
 
     .iphone {
