--- a/css/intro/intro_tablet.scss
+++ b/css/intro/intro_tablet.scss
@@ -71,9 +71,9 @@
     }
 
     .marker {
-      top: calc(50% - 86px);
-      right: -67px;
-      width: 158px;
+      top: calc(50% - 76px);
+      right: 0;
+      width: 128px;
     }
 
     .pantones {
@@ -83,8 +83,8 @@
     }
 
     .earphones {
-      top: 5px;
-      right: -40px;
+      top: -35px;
+      right: 10px;
       width: 243px;
     }
 
@@ -95,9 +95,9 @@
     }
 
     .pencil {
-      top: calc(50% - -14px);
-      right: 44px;
-      width: 70px;
+      top: calc(50% + 10px);
+      right: 10px;
+      width: 60px;
     }
 
     .iphone {
